# precommit-verify

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README-ja.md  README.md  release-plz.toml
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml
npm/: README.md  package.json
npm/lib/: index.js
plans/: floofy-humming-toast.md  scalable-booping-island.md
src/: footer.rs  git.rs  hash.rs  main.rs
tests/: cli.rs
