[package]
name = "precommit-verify"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"
authors = ["KoheiKido <kido@9wick.com>"]
repository = "https://github.com/9wick/precommit-check"
homepage = "https://github.com/9wick/precommit-check"
description = "Pre-commit hook helper that records and verifies repository state via blake3 hash."
readme = "README.md"
keywords = ["git", "pre-commit", "hook", "cli", "lefthook"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "precommit-verify"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
blake3 = "=1.8.5"
bstr = "=1.12.1"
anyhow = "=1.0.102"

[dev-dependencies]
assert_cmd = "=2.2.1"
predicates = "=3.1.4"
tempfile = "=3.27.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
